Enhance writing mock workspace focus guard

--- a/public/GramorX_UI_Review_Checklist.html
+++ b/public/GramorX_UI_Review_Checklist.html
@@ -368,10 +368,10 @@
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock-tests/listening</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock-tests/listening" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock-tests/listening" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/mock/listening</strong></td>
+<td><div class="links"><a href="https://gramorx.com/mock/listening" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/listening" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Listening</span></td>
-<td class="file">pages/mock-tests/listening.tsx</td>
+<td class="file">pages/mock/listening.tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
@@ -417,10 +417,10 @@
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock-tests/reading</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock-tests/reading" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock-tests/reading" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/mock/reading</strong></td>
+<td><div class="links"><a href="https://gramorx.com/mock/reading" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/reading" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Reading</span></td>
-<td class="file">pages/mock-tests/reading.tsx</td>
+<td class="file">pages/mock/reading.tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
@@ -508,10 +508,10 @@
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock-tests/speaking</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock-tests/speaking" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock-tests/speaking" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/mock/speaking</strong></td>
+<td><div class="links"><a href="https://gramorx.com/mock/speaking" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/speaking" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Speaking</span></td>
-<td class="file">pages/mock-tests/speaking.tsx</td>
+<td class="file">pages/mock/speaking.tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
@@ -739,31 +739,31 @@
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock-tests/writing</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock-tests/writing" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock-tests/writing" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/writing/mock</strong></td>
+<td><div class="links"><a href="https://gramorx.com/writing/mock" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/writing/mock" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Writing</span></td>
-<td class="file">pages/mock-tests/writing.tsx</td>
+<td class="file">pages/writing/mock.tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock/writing/[id]</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock/writing/[id]" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/writing/[id]" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/writing/mock/[id]</strong></td>
+<td><div class="links"><a href="https://gramorx.com/writing/mock/[id]" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/writing/mock/[id]" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Writing</span></td>
-<td class="file">pages/mock/writing/[id].tsx</td>
+<td class="file">pages/writing/mock/[id].tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock/writing/results/[attemptId]</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock/writing/results/[attemptId]" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/writing/results/[attemptId]" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/writing/mock/results/[attemptId]</strong></td>
+<td><div class="links"><a href="https://gramorx.com/writing/mock/results/[attemptId]" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/writing/mock/results/[attemptId]" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Writing</span></td>
-<td class="file">pages/mock/writing/results/[attemptId].tsx</td>
+<td class="file">pages/writing/mock/results/[attemptId].tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock/writing/review/[attemptId]</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock/writing/review/[attemptId]" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/writing/review/[attemptId]" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/writing/mock/review/[attemptId]</strong></td>
+<td><div class="links"><a href="https://gramorx.com/writing/mock/review/[attemptId]" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/writing/mock/review/[attemptId]" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Writing</span></td>
-<td class="file">pages/mock/writing/review/[attemptId].tsx</td>
+<td class="file">pages/writing/mock/review/[attemptId].tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
@@ -1304,24 +1304,24 @@
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock-tests</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock-tests" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock-tests" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/mock</strong></td>
+<td><div class="links"><a href="https://gramorx.com/mock" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Mock Tests</span></td>
-<td class="file">pages/mock-tests/index.tsx</td>
+<td class="file">pages/mock/index.tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock-tests/[section]</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock-tests/[section]" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock-tests/[section]" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/mock/[section]</strong></td>
+<td><div class="links"><a href="https://gramorx.com/mock/[section]" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/[section]" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Mock Tests</span></td>
-<td class="file">pages/mock-tests/[section].tsx</td>
+<td class="file">pages/mock/[section].tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock-tests/full</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock-tests/full" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock-tests/full" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/mock/full</strong></td>
+<td><div class="links"><a href="https://gramorx.com/mock/full" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/full" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Mock Tests</span></td>
-<td class="file">pages/mock-tests/full.tsx</td>
+<td class="file">pages/mock/full.tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
@@ -1429,10 +1429,10 @@
 <tbody id="cat_76087032">
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/mock-tests/analytics</strong></td>
-<td><div class="links"><a href="https://gramorx.com/mock-tests/analytics" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock-tests/analytics" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/mock/analytics</strong></td>
+<td><div class="links"><a href="https://gramorx.com/mock/analytics" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/mock/analytics" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Mock Tests</span></td>
-<td class="file">pages/mock-tests/analytics.tsx</td>
+<td class="file">pages/mock/analytics.tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
