Listening mock update - full module fixes

--- a/public/GramorX_UI_Review_Checklist.html
+++ b/public/GramorX_UI_Review_Checklist.html
@@ -1679,10 +1679,10 @@
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
-<td class="wrap"><strong>/settings/security</strong></td>
-<td><div class="links"><a href="https://gramorx.com/settings/security" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/settings/security" target="_blank" rel="noopener">localhost</a></div></td>
+<td class="wrap"><strong>/account/security</strong></td>
+<td><div class="links"><a href="https://gramorx.com/account/security" target="_blank" rel="noopener">gramorx.com</a> &nbsp;|&nbsp; <a href="http://localhost:3000/account/security" target="_blank" rel="noopener">localhost</a></div></td>
 <td><span class="module">Settings</span></td>
-<td class="file">pages/settings/security.tsx</td>
+<td class="file">pages/account/security.tsx</td>
 </tr>
 <tr>
 <td><input type="checkbox" onchange="updateCounts()" /></td>
